[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulation"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
graph-simulation = { path = "lib/graph-simulation" }

# [tool.maturin]
# include-pyi = true  # 自动打包生成的 .pyi 文件
# python-source = "python"

[package.metadata.maturin]
bindings = "pyo3"
