[package]
name = "simulation"
version = "0.1.15"
edition = "2021"
license = "MIT"
description = "A Python package for simulation algorithms"
homepage = "https://github.com/RaVincentHuang/simulation"
repository = "https://github.com/RaVincentHuang/simulation"


[lib]
name = "simulation"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
graph-simulation = "0.1.30"
graph-base = "0.1.14"
rayon = "1.10.0"
# [tool.maturin]
# include-pyi = true  # 自动打包生成的 .pyi 文件
# python-source = "python"

[package.metadata.maturin]
bindings = "pyo3"
